--- a/Rime/default.yaml
+++ b/Rime/default.yaml
@@ -6,6 +6,7 @@ config_version: '0.41'
 schema_list:
   - schema: wubi98_ci
   - schema: wubi98_dz
+  - schema: wubi98_U
 
 switcher:
   caption: 〔方案選單〕
