--- a/Rime/weasel.yaml
+++ b/Rime/weasel.yaml
@@ -42,6 +42,7 @@ style:
   vertical_text: false
   vertical_text_left_to_right: false
   vertical_text_with_wrap: false
+  vertical_auto_reverse: false
 
 preset_color_schemes:
   aqua:
