--- a/Rime/wubi98_ci.custom.yaml
+++ b/Rime/wubi98_ci.custom.yaml
@@ -5,7 +5,7 @@ patch:
   "style/inline_preedit": true
   "style/preedit_type": composition
   "style/mark_text": ""
-  "style/vertical_auto_reverse": true
+  "style/vertical_auto_reverse": false
   "style/vertical_text": false
-  "style/vertical_text_left_to_right": true
+  "style/vertical_text_left_to_right": false
   "style/vertical_text_with_wrap": false
