最新版配置，适配小狼毫新版

--- a/Rime/wubi98_ci.custom.yaml
+++ b/Rime/wubi98_ci.custom.yaml
@@ -1,11 +1,42 @@
 patch:
-  "style/font_face": "98WB-0"
-  "style/horizontal": false
-  "style/fullscreen": false
-  "style/inline_preedit": true
-  "style/preedit_type": composition
-  "style/mark_text": ""
-  "style/vertical_auto_reverse": false
-  "style/vertical_text": false
-  "style/vertical_text_left_to_right": false
+  "style/layout/type": horizontal
+  "style/layout/shadow_offset_x": "-15"
   "style/vertical_text_with_wrap": false
+  "style/layout/align_type": center
+  "style/layout/hilite_spacing": 20
+  "style/layout/margin_x": 12
+  "style/font_point": 14
+  "style/antialias_mode": cleartype
+  "style/font_face": "98WB-0"
+  "style/layout/border_width": 3
+  "style/comment_font_face": "98WB-0"
+  "style/layout/max_width": 2800
+  "style/vertical_text": true
+  "style/layout/border": 2
+  "style/fullscreen": false
+  "style/layout/round_corner": 6
+  "style/inline_preedit": true
+  "style/vertical_text_left_to_right": true
+  "schema/icon": "icons/wubi.ico"
+  "style/preedit_type": composition
+  "style/horizontal": true
+  "style/mark_text": ""
+  "style/vertical_auto_reverse": true
+  "style/display_tray_icon": true
+  "style/layout/spacing": 20
+  "style/label_font_point": 14
+  "style/layout/hilite_padding": 5
+  "style/layout/max_height": 2800
+  "style/layout/margin_y": 12
+  "style/ascii_tip_follow_cursor": true
+  "style/label_format": "%s."
+  "style/layout/shadow_offset_y": 15
+  "style/comment_font_point": 14
+  "style/layout/corner_radius": 14
+  "style/layout/candidate_spacing": 20
+  "style/label_font_face": "98WB-0"
+  "style/layout/shadow_radius": 4
+  "schema/ascii_icon": "icons/en.ico"
+  "style/color_scheme": "songhe"
+  "style/layout/min_width": 160
+  "style/layout/min_height": 0
