--- a/Rime/wubi98_ci.custom.yaml
+++ b/Rime/wubi98_ci.custom.yaml
@@ -1,46 +1,46 @@
 patch:
-  "schema/icon": "icons/wubi.ico" 
-  "style/layout/max_height": 2800
-  "schema/half_icon": "icons/half.ico" 
-  "style/vertical_auto_reverse": false
-  "style/layout/spacing": 20
-  "style/layout/hilite_padding": 5
   "style/label_font_point": 14
-  "style/font_face": "98WB-0"
-  "schema/ascii_icon": "icons/en.ico" 
+  "style/comment_font_face": "98WB-0" 
+  "style/mark_text": ""
+  "style/layout/candidate_spacing": 20
+  "style/label_format": "%s."
   "style/layout/border": 2
-  "style/inline_preedit": true
+  "schema/half_icon": "icons/half.ico" 
+  "style/font_face": "98WB-0"
+  "style/layout/align_type": center
   "style/ascii_tip_follow_cursor": true
-  "style/antialias_mode": cleartype
-  "style/horizontal": true
+  "style/vertical_text_left_to_right": true
   "style/layout/hilite_padding_y": 5
-  "style/layout/margin_y": 12
+  "style/layout/max_height": 2800
   "style/layout/hilite_spacing": 20
-  "style/layout/round_corner": 6
-  "style/layout/shadow_offset_y": 15
-  "style/layout/shadow_radius": 8
-  "style/preedit_type": composition
+  "style/vertical_auto_reverse": false
+  "style/font_point": 14
+  "style/layout/hilite_padding": 5
   "schema/full_icon": "icons/full.ico" 
+  "style/color_scheme": "amber-4"
+  "style/fullscreen": false
+  "style/layout/shadow_offset_x": "-14"
+  "style/layout/margin_x": 12
+  "style/layout/margin_y": 12
+  "style/label_font_face": "98WB-0"
+  "style/layout/min_height": 0
   "style/vertical_text_with_wrap": true
+  "style/horizontal": true
+  "style/layout/type": vertical
+  "style/display_tray_icon": false
+  "style/layout/border_width": 3
+  "style/layout/corner_radius": 16
+  "style/layout/hilite_padding_x": 5
+  "style/vertical_text": true
+  "style/layout/shadow_radius": 6
+  "style/inline_preedit": true
+  "style/layout/spacing": 20
+  "style/antialias_mode": cleartype
+  "style/layout/min_width": 160
+  "style/preedit_type": composition
+  "style/layout/round_corner": 10
   "style/layout/max_width": 2800
   "style/comment_font_point": 14
-  "style/layout/min_height": 0
-  "style/layout/shadow_offset_x": "-15"
-  "style/layout/hilite_padding_x": 5
-  "style/layout/border_width": 3
-  "style/font_point": 14
-  "style/layout/align_type": center
-  "style/label_format": "%s."
-  "style/comment_font_face": "98WB-0" 
-  "style/label_font_face": "98WB-0"
-  "style/layout/corner_radius": 14
-  "style/layout/type": horizontal
-  "style/vertical_text_left_to_right": true
-  "style/layout/min_width": 160
-  "style/fullscreen": false
-  "style/vertical_text": true
-  "style/color_scheme": "amber-2"
-  "style/mark_text": ""
-  "style/layout/margin_x": 12
-  "style/display_tray_icon": true
-  "style/layout/candidate_spacing": 20
+  "schema/icon": "icons/wubi.ico" 
+  "schema/ascii_icon": "icons/en.ico" 
+  "style/layout/shadow_offset_y": 14
