Unicode15.1标准下的全集汉字全部收录，字型点位已校准，拆分助解全部完成，已剔除PUA
Unicode15.1标准下的全集汉字全部收录，字型点位已校准，拆分助解全部完成，已剔除PUA

--- a/Rime/weasel.yaml
+++ b/Rime/weasel.yaml
@@ -1,30 +1,33 @@
 # Weasel settings
 # encoding: utf-8
 
-config_version: "0.22"
+config_version: "0.23"
 
 style:
-  capture_by_click: false
-  capture_type: none
-  color_scheme: 98wb-pink
+  antialias_mode: cleartype
+  ascii_tip_follow_cursor: true
+  color_scheme: "amber-7"
   comment_font_face: "98WB-0"
-  comment_font_point: 14
+  comment_font_point: 18
   display_tray_icon: false
   font_face: "98WB-0"
-  font_point: 14
+  font_point: 18
   fullscreen: false
-  horizontal: false
+  horizontal: true
   inline_preedit: true
   label_font_face: "98WB-0"
-  label_font_point: 14
+  label_font_point: 18
   label_format: "%s."
+  mouse_hover_ms: 0
   layout:
     align_type: center
     border: 2
     border_width: 3
     candidate_spacing: 20
-    corner_radius: 14
+    corner_radius: 16
     hilite_padding: 5
+    hilite_padding_x: 5
+    hilite_padding_y: 5
     hilite_spacing: 20
     margin_x: 12
     margin_y: 12
@@ -32,18 +35,19 @@ style:
     max_width: 2800
     min_height: 0
     min_width: 160
-    round_corner: 6
-    shadow_offset_x: "-15"
-    shadow_offset_y: 15
-    shadow_radius: 8
+    round_corner: 10
+    shadow_offset_x: "-14"
+    shadow_offset_y: 14
+    shadow_radius: 6
     spacing: 20
-  mark_text: ""
+    type: vertical
+  mark_text: " "
   preedit_type: composition
-  vertical_text: false
-  vertical_text_left_to_right: false
-  vertical_text_with_wrap: false
   vertical_auto_reverse: false
-
+  vertical_text: true
+  vertical_text_left_to_right: true
+  vertical_text_with_wrap: true
+  
 preset_color_schemes:
   aqua:
     name: 碧水／Aqua
@@ -141,6 +145,132 @@ preset_color_schemes:
     hilited_candidate_text_color: 0x000000 #高亮候选文字颜色
     hilited_candidate_back_color: 0x31B7CC #高亮候选背景颜色
     shadow_color: 0x00000000 #候选窗阴影色，默认全透明（无阴影）
+
+  amber-8:
+    author: "佛振 <chen.sst@gmail.com>"
+    back_color: 0x00ffffff
+    border_color: 0x00000000
+    candidate_back_color: 0xE4E4E4
+    candidate_shadow_color: 0xab000000
+    hilited_back_color: 0xE4E4E4
+    hilited_candidate_back_color: 0x000000
+    hilited_candidate_shadow_color: 0xab000000
+    hilited_candidate_text_color: 0xE4E4E4
+    hilited_label_color: 0xE4E4E4
+    hilited_shadow_color: 0xab000000
+    hilited_text_color: 0x000000
+    label_color: 0x000000
+    name: "墨池（透明）／trans_Ink"
+    shadow_color: 0x00000000
+    text_color: 0x000000
+
+  amber-7:
+    name: 琥珀-清新／Amber-Soft-blue
+    author: 五笔小筑 <wubixiaozhu@126.com>
+    text_color: 0xE99321
+    label_color: 0xE99321 #非高亮候选序数值颜色
+    back_color: 0xffffff
+    border_color: 0x333333
+    hilited_text_color: 0x2238dc
+    hilited_back_color: 0xffffff    
+    hilited_candidate_text_color: 0x2021FF #高亮候选文字颜色
+    hilited_candidate_border_color: 0xCFDCFD #高亮候选背景块描边色
+    hilited_candidate_back_color: 0xECF1FC #高亮候选背景颜色
+    comment_text_color: 0xE99321 #opencc注解颜色
+    hilited_label_color: 0x2021FF #高亮候选的序数值颜色
+    border_color: 0xE99321 #候选窗边框颜色
+    candidate_text_color: 0xE99321 #非高亮候选文字颜色   
+   
+   
+  amber-6:
+    name: 琥珀-柔光／Amber-Soft-light
+    author: 五笔小筑 <wubixiaozhu@126.com>
+    text_color: 0xffffff #默认文字颜色
+    back_color: 0xFC36ABDD #候选窗背景色
+    border_color: 0x00444444 #候选窗边框颜色
+    candidate_back_color: 0xFC36ABDD #非高亮候选背景颜色    
+    comment_text_color: 0xffffff #opencc注解颜色
+    candidate_shadow_color: 0x00000000 #非高亮候选背景块阴影颜色
+    candidate_text_color: 0xffffff #非高亮候选文字颜色
+    label_color: 0xffffff #非高亮候选序数值颜色
+    hilited_candidate_border_color: 0xEA23BE95 #高亮候选背景块描边色
+    hilited_candidate_shadow_color: 0xD3153BFE #高亮候选背景块阴影颜色
+    hilited_label_color: 0xffffff #高亮候选的序数值颜色
+    hilited_mark_color: 0xDE33C1 #标记高亮的标签小竖块的颜色
+    hilited_shadow_color: 0xEA0DD0D5 #编码背景块阴影颜色
+    hilited_text_color: 0x82e6ca #编码文字颜色
+    hilited_back_color: 0x27BA53 #编码背景颜色
+    hilited_candidate_text_color: 0xffffff #高亮候选文字颜色
+    hilited_candidate_back_color: 0xEA23BE95 #高亮候选背景颜色
+    shadow_color: 0xEA0DD0D5 #候选窗阴影色，默认全透明（无阴影）
+    
+  amber-5:
+    name: 琥珀-荧光叶绿／Amber-green-leaf
+    author: 五笔小筑 <wubixiaozhu@126.com>
+    text_color: 0xffffff #默认文字颜色
+    back_color: 0x00FFFFFF #候选窗背景色
+    border_color: 0x00444444 #候选窗边框颜色
+    candidate_back_color: 0xE6718D30 #非高亮候选背景颜色    
+    comment_text_color: 0xffffff #opencc注解颜色
+    candidate_shadow_color: 0xF599E99E #非高亮候选背景块阴影颜色
+    candidate_text_color: 0xffffff #非高亮候选文字颜色
+    label_color: 0xffffff #非高亮候选序数值颜色
+    hilited_candidate_border_color: 0xE6718D30 #高亮候选背景块描边色
+    hilited_candidate_shadow_color: 0xF599E99E #高亮候选背景块阴影颜色
+    hilited_label_color: 0xffffff #高亮候选的序数值颜色
+    hilited_mark_color: 0xDE33C1 #标记高亮的标签小竖块的颜色
+    hilited_shadow_color: 0xab2EFF58 #编码背景块阴影颜色
+    hilited_text_color: 0x82e6ca #编码文字颜色
+    hilited_back_color: 0x27BA53 #编码背景颜色
+    hilited_candidate_text_color: 0xffffff #高亮候选文字颜色
+    hilited_candidate_back_color: 0xE6718D30 #高亮候选背景颜色
+    shadow_color: 0xEB60DCDC #候选窗阴影色，默认全透明（无阴影）
+
+  amber-4:
+    name: 琥珀-荧光深红／Amber-dark-red
+    author: 五笔小筑 <wubixiaozhu@126.com>
+    text_color: 0xffffff #默认文字颜色
+    back_color: 0x00FFFFFF #候选窗背景色
+    border_color: 0x00444444 #候选窗边框颜色
+    candidate_back_color: 0xF348C1CA #非高亮候选背景颜色    
+    comment_text_color: 0xffffff #opencc注解颜色
+    candidate_shadow_color: 0xF37F1FDE #非高亮候选背景块阴影颜色
+    candidate_text_color: 0xffffff #非高亮候选文字颜色
+    label_color: 0xffffff #非高亮候选序数值颜色
+    hilited_candidate_border_color: 0xF348C1CA #高亮候选背景块描边色
+    hilited_candidate_shadow_color: 0xF37F1FDE #高亮候选背景块阴影颜色
+    hilited_label_color: 0xffffff #高亮候选的序数值颜色
+    hilited_mark_color: 0xDE33C1 #标记高亮的标签小竖块的颜色
+    hilited_shadow_color: 0xab2EFF58 #编码背景块阴影颜色
+    hilited_text_color: 0x82e6ca #编码文字颜色
+    hilited_back_color: 0x27BA53 #编码背景颜色
+    hilited_candidate_text_color: 0xffffff #高亮候选文字颜色
+    hilited_candidate_back_color: 0xF348C1CA #高亮候选背景颜色
+    shadow_color: 0xEB60DCDC #候选窗阴影色，默认全透明（无阴影）
+
+
+
+  amber-3:
+    name: 琥珀-荧光水绿／Amber-light-green
+    author: 五笔小筑 <wubixiaozhu@126.com>
+    text_color: 0xffffff #默认文字颜色
+    back_color: 0x00FFFFFF #候选窗背景色
+    border_color: 0x00444444 #候选窗边框颜色
+    candidate_back_color: 0xC552D457 #非高亮候选背景颜色    
+    comment_text_color: 0xffffff #opencc注解颜色
+    candidate_shadow_color: 0xF0A1F0ED #非高亮候选背景块阴影颜色
+    candidate_text_color: 0xffffff #非高亮候选文字颜色
+    label_color: 0xffffff #非高亮候选序数值颜色
+    hilited_candidate_border_color: 0xC552D457 #高亮候选背景块描边色
+    hilited_candidate_shadow_color: 0xF0A1F0ED #高亮候选背景块阴影颜色
+    hilited_label_color: 0xffffff #高亮候选的序数值颜色
+    hilited_mark_color: 0xDE33C1 #标记高亮的标签小竖块的颜色
+    hilited_shadow_color: 0xab2EFF58 #编码背景块阴影颜色
+    hilited_text_color: 0x82e6ca #编码文字颜色
+    hilited_back_color: 0x27BA53 #编码背景颜色
+    hilited_candidate_text_color: 0xffffff #高亮候选文字颜色
+    hilited_candidate_back_color: 0xC552D457 #高亮候选背景颜色
+    shadow_color: 0xB329E63C #候选窗阴影色，默认全透明（无阴影）
 
 
   amber-2:
@@ -1307,4 +1437,3 @@ preset_color_schemes:
     hilited_shadow_color: 0x6b000000  
     # hilited_candidate_border_color: 0x141620
     hilited_candidate_shadow_color: 0x6b000000
-
