--- a/Rime/symbols.yaml
+++ b/Rime/symbols.yaml
@@ -63,7 +63,7 @@ punctuator:
     '@' : [ '@', ©, ®, ℗ ]
     '#' : [ '#', № ]
     '%' : [ '%', ％, '°', '℃', ‰, ‱, ℉ ]
-    '$' : [ ￥, '$', '€', '£', '¥', '¢', '¤', ₩ ]
+    '$' : { commit: '$' }
     '^' : { commit: …… }
     '&' : '&'
     '*' : [ '*', ＊, ·, ・, ×, ※, ❂, ⁂, ☮, ☯, ☣ ]
