--- a/Rime/user.yaml
+++ b/Rime/user.yaml
@@ -1,11 +1,11 @@
 var:
-  last_build_time: 1688265968
+  last_build_time: 1703318144
   option:
     full_shape: true
-  previously_selected_schema: wubi98_ci
+  previously_selected_schema: wubi98_U
   schema_access_time:
     98wb: 1586761735
     py: 1645075663
-    wubi98_U: 1685927412
-    wubi98_ci: 1687910866
-    wubi98_dz: 1683860694
+    wubi98_U: 1703297567
+    wubi98_ci: 1703035945
+    wubi98_dz: 1702852071
