--- a/Rime/wubi98_U.custom.yaml
+++ b/Rime/wubi98_U.custom.yaml
@@ -1,42 +1,48 @@
 patch:
-  "style/font_point": 14
-  "style/label_font_point": 14
-  "style/antialias_mode": cleartype
-  "style/layout/border": 2
-  "style/ascii_tip_follow_cursor": true
-  "style/layout/shadow_radius": 8
-  "style/display_tray_icon": true
-  "style/vertical_text_with_wrap": true
-  "style/layout/round_corner": 6
-  "style/layout/align_type": center
-  "style/color_scheme": "ink"
-  "style/vertical_text": true
-  "style/mark_text": ""
-  "style/layout/border_width": 3
-  "schema/icon": "icons/wubi.ico" 
-  "style/layout/min_width": 160
-  "style/layout/max_width": 2800
-  "style/layout/margin_y": 12
-  "style/horizontal": true
-  "style/layout/hilite_spacing": 20
-  "style/layout/spacing": 20
-  "schema/ascii_icon": "icons/en.ico" 
-  "style/layout/candidate_spacing": 20
-  "style/vertical_auto_reverse": false
-  "style/layout/min_height": 0
-  "style/inline_preedit": true
-  "style/preedit_type": composition
-  "style/layout/margin_x": 12
-  "style/fullscreen": false
-  "style/comment_font_point": 14
-  "style/layout/shadow_offset_y": 15
-  "style/label_font_face": "98WB-3"
-  "style/layout/hilite_padding": 5
-  "style/comment_font_face": "98WB-3" 
+  "style/comment_font_face": "98WB-3"
   "style/layout/type": vertical
-  "style/layout/shadow_offset_x": -15
-  "style/layout/max_height": 2800
-  "style/font_face": "98WB-V,98WB-U"
-  "style/label_format": "%s."
+  "style/layout/hilite_spacing": 10
+  "schema/half_icon": "icons/half.ico" 
+  "style/inline_preedit": true
   "style/vertical_text_left_to_right": true
-  "style/layout/corner_radius": 14
+  "style/display_tray_icon": false
+  "style/mark_text": " "
+  "style/layout/shadow_offset_y": 8
+  "style/layout/hilite_padding": 5
+  "style/layout/shadow_offset_x": "-8"
+  "style/layout/margin_x": 10
+  "style/layout/spacing": 10
+  "style/label_font_point": 16
+  "style/fullscreen": false
+  "style/layout/shadow_radius": 8
+  "style/mouse_hover_ms": 0
+  "style/label_font_face": "98WB-3"
+  "style/layout/corner_radius": 16
+  "style/layout/align_type": center
+  "style/layout/hilite_padding_x": 5
+  "style/label_format": "%s."
+  "style/layout/border_width": 3
+  "style/font_face": "98WB-V,98WB-U"
+  "style/preedit_type": composition
+  "style/ascii_tip_follow_cursor": true
+  "style/color_scheme": "amber"
+  "style/vertical_text_with_wrap": false
+  "style/layout/round_corner": 16
+  "style/paging_on_scroll": false
+  "style/layout/candidate_spacing": 15
+  "style/layout/border": 2
+  "style/layout/margin_y": 10
+  "schema/icon": "icons/wubi.ico"
+  "style/vertical_auto_reverse": false
+  "schema/full_icon": "icons/full.ico" 
+  "style/layout/max_width": 2800
+  "style/layout/min_height": 0
+  "style/layout/hilite_padding_y": 5
+  "style/layout/min_width": 80
+  "style/layout/max_height": 2800
+  "style/comment_font_point": 16
+  "style/font_point": 16
+  "style/vertical_text": true
+  "schema/ascii_icon": "icons/en.ico" 
+  "style/horizontal": true
+  "style/antialias_mode": default
