--- a/Rime/wubi98_U.dict.yaml
+++ b/Rime/wubi98_U.dict.yaml
@@ -87679,7 +87679,7 @@ encoder:
 𥰏	trtg	212346	trtg
 䉥	trtn	212345	trtn
 𥫜	tru	212344	tru
-𭼽	TRUE	212343	TRUE
+𭼽	true	212343	true
 𮁨	trui	212342	trui
 𥲵	truo	212341	truo
 𮅣	trvf	212340	trvf
