--- a/Rime/user.yaml
+++ b/Rime/user.yaml
@@ -1,11 +1,12 @@
 var:
-  last_build_time: 1703751178
+  last_build_time: 1704097879
   option:
     full_shape: true
   previously_selected_schema: wubi98_U
   schema_access_time:
     98wb: 1586761735
     py: 1645075663
-    wubi98_U: 1703738814
-    wubi98_ci: 1703738799
-    wubi98_dz: 1702852071
+    wb_spelling: 1703767887
+    wubi98_U: 1704097713
+    wubi98_ci: 1704079637
+    wubi98_dz: 1704047998
