--- a/Rime/wubi98_ci.dict.yaml
+++ b/Rime/wubi98_ci.dict.yaml
@@ -41577,7 +41577,7 @@ encoder:
 蝆	jhg	1084297	jhgf
 早到	jhgc	1084296	
 早于	jhgf	1084295	
-蝆	jhgf	1084294	jhgf
+蝆	jhgg	1084294	jhgg
 䖹	jhgf	1084293	jhgf
 冒死	jhgq	1084292	
 早班	jhgy	1084291	
