--- a/Rime/wubi98_dz.dict.yaml
+++ b/Rime/wubi98_dz.dict.yaml
@@ -12714,7 +12714,7 @@ encoder:
 冒	jhf	351660	jhf
 㫔	jhf	351659	jhf
 蝆	jhg	351658	jhgf
-蝆	jhgf	351657	jhgf
+蝆	jhgg	351657	jhgg
 䖹	jhgf	351656	jhgf
 刂	jhh	351655	jhh
 蠼	jhhc	351654	jhhc
