--- a/Rime/hot_keys.yaml
+++ b/Rime/hot_keys.yaml
@@ -1,8 +1,6 @@
 patch:
-  app_options/chrome.exe: {ascii_mode: false}
   app_options/cmd.exe: {ascii_mode: false}
-  app_options/conhost.exe: {ascii_mode: false}
-  app_options/test1.exe: {ascii_mode: true}
-  app_options/test2.exe: {ascii_mode: true}
-  app_options/test3.exe: {ascii_mode: true}
-  app_options/QQ.exe: {ascii_mode: true}
+  app_options/test1.exe: {ascii_mode: false}
+  app_options/test2.exe: {ascii_mode: false}
+  app_options/test3.exe: {ascii_mode: false}
+  app_options/test4.exe: {ascii_mode: false}
