--- a/Rime/weasel.custom.yaml
+++ b/Rime/weasel.custom.yaml
@@ -2,8 +2,8 @@ customization:
   distribution_code_name: Weasel
   distribution_version: 0.15.0.0
   generator: "Weasel::UIStyleSettings"
-  modified_time: "Sun Nov 26 01:01:35 2023"
+  modified_time: "Sun Feb  4 23:17:08 2024"
   rime_version: 1.9.0
 patch:
-  __include: "hot_keys:/patch"
-  "style/color_scheme": amber
+  __include: "hot_keys.custom:/patch"
+  "style/color_scheme": "amber-0"
