--- a/Rime/wubi98_ci.extended.dict.yaml
+++ b/Rime/wubi98_ci.extended.dict.yaml
@@ -23,11 +23,11 @@ encoder:
     - length_in_range: [4, 90]
       formula: "AaBaCaZa"
 ...
-春眠不觉晓，处处闻啼鸟。夜来风雨声，花落知多少
+移舟泊烟渚，日暮客愁新。\r野旷天低树，江清月近人。\r《宿建德江》（孟浩然）	demo
+春眠不觉晓，处处闻啼鸟。\n夜来风雨声，花落知多少。\n《春晓》（孟浩然）	demo
 红豆生南国，春来发几枝。愿君多采撷，此物最相思
 向晚意不适，驱车登古原。夕阳无限好，只是近黄昏
 故人西辞黄鹤楼，烟花三月下扬州。孤帆远影碧空尽，唯见长江天际流
 北京市海淀区清华大学医学科学楼	addr
 tsps_e@tsinghua.edu.cn	mail
 13552888888	tel
-
