--- a/Rime/default.custom.yaml
+++ b/Rime/default.custom.yaml
@@ -1,3 +1,9 @@
+customization:
+  distribution_code_name: Weasel
+  distribution_version: 0.15.0.0
+  generator: "Rime::SwitcherSettings"
+  modified_time: "Fri Feb  9 17:11:14 2024"
+  rime_version: 1.9.0
 patch:
   schema_list:
     - {schema: wubi98_ci}
