--- a/Rime/symbols.custom.yaml
+++ b/Rime/symbols.custom.yaml
@@ -1,1 +1,2 @@
-patch:
+patch: #增补
+  "punctuator/symbols/+": {'/bool': [ "✓", "✗" ],'/erro': [ "✗", "✘", "x", "×", "X", "✕", "☓", "✖"],'/wrong': [ "✗", "✘", "x", "×", "X", "✕", "☓", "✖"],'/false': [ "✗", "✘", "x", "×", "X", "✕", "☓", "✖"],'/true': [ "✓", "✔" ],'/correct': [ "✓", "✔" ],'/right': [ "✓", "✔" ],'/win': [ "❖", "⌘", "" ],'/mark': [ "✿", "❀", "☘", "✺", "✹", "✤", "❊", "❋", "❉", "❆", "❅", "❃", "❁", "✾", "✽"]}
