--- a/Rime/wubi98_dz.dict.yaml
+++ b/Rime/wubi98_dz.dict.yaml
@@ -7549,7 +7549,7 @@ encoder:
 塯	fqyl	356826	fqyl
 霤	fqyl	356825	fqyl
 怷	fqyn	356824	fqyn
-㫄	fqyr	356823	fqyr
+㫄	yqyr	356823	yqyr
 圴	fqyy	356822	fqyy
 㽌	fqyy	356821	fqyy
 垢	fr	356820	frgk
@@ -27988,7 +27988,7 @@ encoder:
 辠	thuj	336386	thuj
 箎	thw	336385	thwb
 箎	thwb	336384	thwb
-臮	thwy	336383	thwy
+臮	thww	336383	thww
 秒	ti	336382	titt
 稍	ti	336381	tieg
 篊	tia	336380	tiaw
@@ -34365,7 +34365,7 @@ encoder:
 紀	xnn	330009	xnn
 纟	xnng	330008	xnng
 彑	xnng	330007	xnng
-黽	xnng	330006	xnng
+黽	xhng	330006	xhng
 毌	xnnh	330005	xnnh
 繏	xnnw	330004	xnnw
 母	xnny	330003	xnny
@@ -34393,7 +34393,7 @@ encoder:
 缠	xoj	329981	xojf
 缠	xojf	329980	xojf
 纏	xojf	329979	xojf
-纒	xojf	329978	xojf
+纒	xdjf	329978	xdjf
 继	xon	329977	xonn
 继	xonn	329976	xonn
 継	xonn	329975	xonn
