--- a/Rime/user.yaml
+++ b/Rime/user.yaml
@@ -1,12 +1,12 @@
 var:
-  last_build_time: 1707469875
+  last_build_time: 1710133115
   option:
     full_shape: true
-  previously_selected_schema: wubi98_U
+  previously_selected_schema: wubi98_ci
   schema_access_time:
     98wb: 1586761735
     py: 1707410034
     wb_spelling: 1707410036
-    wubi98_U: 1707468515
-    wubi98_ci: 1707462436
+    wubi98_U: 1707479612
+    wubi98_ci: 1710133075
     wubi98_dz: 1707410038
